CSS: adjust button style

--- a/views/layout.html
+++ b/views/layout.html
@@ -158,9 +158,9 @@
         button {
             width: 200px;
             height: 40px;
-            background-color: #E84610;
+            background-color: #02496d;
             border: 1px solid grey;
-            color: white;
+            color: gold;
             text-transform: uppercase;
             margin: 10px;
             border-radius: 8px;
