CSS: adjust background image

--- a/views/layout.html
+++ b/views/layout.html
@@ -12,6 +12,8 @@
     <style>
         body {
             font-family: Arial;
+            background: url('../workspaces/help-grogu/assets/images/background.png') no-repeat center center;
+            background-size: contain;
         }
 
         /**
