CSS: add background image - new url

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,6 @@
 }
 
 body {
-    background: url('../workspaces/help-grogu/assets/images/background.png') no-repeat center center;
+    background: url(https://i.ibb.co/sWFPcRs/Untitled-design.png);
     background-size: cover;
 }
