CSS: adjust background image

--- a/views/layout.html
+++ b/views/layout.html
@@ -12,7 +12,7 @@
     <style>
         body {
             font-family: Arial;
-            background: url('../workspaces/help-grogu/assets/images/background.png') no-repeat center center;
+            background: url(https://i.ibb.co/sWFPcRs/Untitled-design.png);
             background-size: contain;
         }
 
