--- a/views/index.html
+++ b/views/index.html
@@ -24,4 +24,8 @@
         // Set focus in the terminal
         document.getElementsByClassName("xterm-helper-textarea")[0].focus();
     </script>
+
+    <footer>
+        
+    </footer>
 </body>
