--- a/views/layout.html
+++ b/views/layout.html
@@ -10,6 +10,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
     <title>Python Terminal by Code Institute</title>
     <style>
+        /**
+        *Background image
+        */
         body {
             font-family: Arial;
             background: url(https://i.ibb.co/sWFPcRs/Untitled-design.png);
@@ -156,18 +159,8 @@
         .xterm-underline {
             text-decoration: underline;
         }
-
-        button {
-            width: 200px;
-            height: 40px;
-            background-color: #02496d;
-            border: 1px solid grey;
-            color: gold;
-            text-transform: uppercase;
-            margin: 10px;
-            border-radius: 8px;
-        }
     </style>
+
 </head>
 
 @{body}
