CSS FIX: move button back to layout page

--- a/views/layout.html
+++ b/views/layout.html
@@ -159,6 +159,22 @@
         .xterm-underline {
             text-decoration: underline;
         }
+
+        /* button */
+
+        button {
+            display: flex;
+            justify-content: center;
+            padding-top: 100px;
+            width: 200px;
+            height: 40px;
+            background-color: #02496d;
+            border: 1px solid grey;
+            color: gold;
+            text-transform: uppercase;
+            margin: 10px;
+            border-radius: 8px;
+        }
     </style>
 
 </head>
