FIX: CSS - change background to cover

--- a/views/layout.html
+++ b/views/layout.html
@@ -16,7 +16,7 @@
         body {
             font-family: Arial;
             background: url(https://i.ibb.co/sWFPcRs/Untitled-design.png);
-            background-size: contain;
+            background-size: cover;
         }
 
         /**
